--- a/src/app/main-portal/header/header.component.html
+++ b/src/app/main-portal/header/header.component.html
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" routerLink="/product"  >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="cart"  >View Cart</a>
+            <a class="nav-link" routerLink="cart"  >cart</a>
           </li>
         </ul>
       </div>
