--- a/src/app/main-portal/product/product.component.html
+++ b/src/app/main-portal/product/product.component.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-4 " *ngFor="let item of dataofsevice11">
             <div class="card mb-4 mt-5" style="width: 18rem;">
-                <img *ngFor="let data of item[0]" [src]="data.image[0]" class="card-img-top" alt="...">
+                <img [src]="item.image[1]" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title text-center">{{item.title}}</h5>
                     <p class="card-text">Some quick example text to
@@ -14,7 +14,7 @@
                     <span *ngIf="item.qty === 0"><i class="fa-solid fa-xmark text-danger"></i>
                         <h4>{{item.qty ===0 ? 'Out Of Stock': ''}}</h4>
                     </span>
-                    <button type="button" (click)="goToCartPage(item.id)" [disabled]="item.qty === 0 " routerLink="/"
+                    <button type="button" (click)="goToCartPage(item.id)" [disabled]="item.qty === 0 " 
                         class="btn btn-outline-success w-100">Add To Cart</button>
                 </div>
             </div>
