--- a/src/app/main-portal/header/header.component.html
+++ b/src/app/main-portal/header/header.component.html
@@ -14,5 +14,7 @@
           </li>
         </ul>
       </div>
+      <i class="fa-solid fa-basket-shopping ms-auto me-5"></i>
     </div>
+    
   </nav>
