--- a/src/app/main-portal/cart/cart.component.html
+++ b/src/app/main-portal/cart/cart.component.html
@@ -1,11 +1,10 @@
-<p>cart works!</p>
+
 
 <div class="container" >
-    <div class="row">
-        <div class="col-md-4">
+   
+            <h2>Name : {{filterdata[0].Name}}</h2>
+            <h3>Quantity : {{filterdata[0].qty}}</h3>
+            <p>Title : {{filterdata[0].title}}</p>
             <img  *ngFor="let item of filterdata[0].image" alt="" [src]="item">
         </div>
-        <div class="col-md-4"></div>
-        <div class="col-md-4"></div>
-    </div>
-</div>
+       
