--- a/src/app/main-portal/product/product.component.html
+++ b/src/app/main-portal/product/product.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<!-- <div class="container">
     <h1 class="text-center">Welcome To My Products list</h1>
     <div class="row">
         <div class="col-md-4 " *ngFor="let item of dataofsevice11">
             <div class="card mb-4 mt-5" style="width: 18rem;">
-                <img [src]="item.image[1]" class="card-img-top" alt="...">
+                <img [src]="item.image[0]" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title text-center">{{item.title}}</h5>
                     <p class="card-text">Some quick example text to
@@ -21,7 +21,57 @@
         </div>
 
     </div>
+</div> -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-4" *ngFor="let item of dataofsevice11">
+      <!-- flip-card-container -->
+<div class="flip-card-container" style="--hue: 220">
+  <div class="flip-card">
+
+    <div class="card-front">
+      <figure>
+        <div class="img-bg"></div>
+        <img class="image1"  [src]="item.image[0]"  alt="Brohm Lake">
+        <figcaption>{{item.Name}}</figcaption>
+      </figure>
+
+      <ul>
+        <li>Detail 1</li>
+        <li>Detail 2</li>
+        <li>Detail 3</li>
+        <li>Detail 4</li>
+        <li>Detail 5</li>
+      </ul>
+    </div>
+
+    <div class="card-back">
+      <figure>
+        <div class="img-bg"></div>
+        <img class="image2"[src]="item.image[1]" alt="Brohm Lake">
+      </figure>
+
+      <button (click)="goToCartPage(item.id)" [disabled]="item.qty === 0 " >Add To Cart</button>
+
+      <div class="design-container">
+        <span class="design design--1"></span>
+        <span class="design design--2"></span>
+        <span class="design design--3"></span>
+        <span class="design design--4"></span>
+        <span class="design design--5"></span>
+        <span class="design design--6"></span>
+        <span class="design design--7"></span>
+        <span class="design design--8"></span>
+      </div>
+    </div>
+
+  </div>
 </div>
+    </div>
+  </div>
+</div>
+
+  
 
 
 <!-- 1st
