--- a/src/app/main-portal/header/header.component.html
+++ b/src/app/main-portal/header/header.component.html
@@ -14,7 +14,8 @@
           </li>
         </ul>
       </div>
-      <i class="fa-solid fa-basket-shopping ms-auto me-5"></i>
+      <i class="fa-solid fa-cart-shopping ms-auto me-5"></i>
+      
     </div>
     
   </nav>
