--- a/src/app/main-portal/product/product.component.html
+++ b/src/app/main-portal/product/product.component.html
@@ -37,7 +37,7 @@
       </figure>
 
       <ul>
-        <li>Detail 1</li>
+        <li><h5 style="color:white ;" >{{item.title}}</h5></li>
         <li>Detail 2</li>
         <li>Detail 3</li>
         <li>Detail 4</li>
@@ -53,7 +53,7 @@
         
       </figure>
 
-      <button (click)="goToCartPage(item.id)" [disabled]="item.qty === 0 " >Add To Cart</button>
+      <button class="btn2" (click)="goToCartPage(item.id)" [disabled]="item.qty === 0 " >Add To Cart</button>
 
       <div class="design-container">
         <span class="design design--1"></span>
