--- a/src/app/main-portal/header/header.component.html
+++ b/src/app/main-portal/header/header.component.html
@@ -13,6 +13,8 @@
             <a class="nav-link" routerLink="cart"  >cart</a>
           </li>
         </ul>
+        <button type="button" class="btn btn-outline-primary log" routerLink="/sign-in">Login</button>
+        <button type="button" class="btn btn-outline-primary sign">Sign-in</button>
       </div>
       <i class="fa-solid fa-cart-shopping ms-auto me-5"></i>
       
