--- a/src/app/main-portal/header/header.component.html
+++ b/src/app/main-portal/header/header.component.html
@@ -10,13 +10,13 @@
             <a class="nav-link active" aria-current="page" routerLink="/product"  >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="cart"  >cart</a>
+            <a class="nav-link active" routerLink="cart"  >cart</a>
           </li>
         </ul>
-        <button type="button" class="btn btn-outline-primary log" routerLink="/sign-in">Login</button>
-        <button type="button" class="btn btn-outline-primary sign">Sign-in</button>
+        <button type="button" class="btn btn-outline-danger btn1 log me-2" routerLink="/sign-in">Login</button>
+        <button type="button" class="btn btn-outline-danger btn1 sign me-5">Sign-in</button>
       </div>
-      <i class="fa-solid fa-cart-shopping ms-auto me-5"></i>
+      <i class="fa-solid fa-cart-shopping ms-auto me-5"><p>{{counter}}</p></i>
       
     </div>
     
