--- a/src/app/main-portal/cart/cart.component.css
+++ b/src/app/main-portal/cart/cart.component.css
@@ -1,5 +1,59 @@
+.container{
+    margin-right: 10vh;
+}
+
 img{
    margin-top: 20px;
     border-radius: 27px;
     box-shadow: 2px 2px 17px;
+    width: 100%;
+    margin-right: 20%;
+}
+.btn1{
+    width: 50px;
+    height: 40px;
+    border: 1px solid black;
+    background: #ffff;
+    margin-top: 40vh;
+    /* margin-left: 20px;
+    margin-right: 20px; */
+}
+.box{
+    margin-left: 20%;
+}
+.btn2{
+    width: 50px;
+    height: 40px;
+    border: 1px solid black;
+    background: #ffff;
+    margin-top: 20px;
+}
+.btn1:focus{
+    
+    color: #fff !important;
+    text-shadow:
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	,
+    0 0 6px #ca0404	;
+      -moz-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+    -webkit-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+  
+}
+.divi >img{
+    height: 20%;
+    width: 30%;
+    display: block;
+    border-radius: 0%;
 }
