--- a/src/app/main-portal/cart/cart.component.html
+++ b/src/app/main-portal/cart/cart.component.html
@@ -3,10 +3,20 @@
         <div class="col-md-4">
             <img *ngFor="let item of filterdata[0].image" [src]="item" alt="" srcset="">
         </div>
-        <div class="col-md-5"></div>
+        <div class="col-md-5">
+            <div class="box">
+                <button type="button" class="btn1 " (click)="addition()" >+</button>
+            <span class="ms-2 me-2">{{cartQuantity}}</span>
+            <button type="button" class="btn1 " (click)="subract()">-</button>
+            <div class="divi" *ngIf="show !== false" >
+              <img [src]="filterdata[0].image[0]" alt="" srcset="">
+
+                <button type="button" class="btn2 " (click)="addition()" >+</button>
+                {{cartQuantity}}
+                <button type="button" class="btn2 " (click)="subract()">-</button>
+            </div>
+            </div>
+        </div>
         <div class="col-md-3"></div>
     </div>
 </div>
-
-
-       
