--- a/src/app/main-portal/header/header.component.html
+++ b/src/app/main-portal/header/header.component.html
@@ -16,7 +16,8 @@
         <button type="button" class="btn btn-outline-danger btn1 log me-2" routerLink="/sign-in">Login</button>
         <button type="button" class="btn btn-outline-danger btn1 sign me-5">Sign-in</button>
       </div>
-      <i class="fa-solid fa-cart-shopping ms-auto me-5"><p>{{counter}}</p></i>
+    
+      <i class="fa-solid fa-cart-arrow-down ms-auto me-5"><p>{{counter}}</p></i>
       
     </div>
     
