--- a/src/app/main-portal/cart/cart.component.html
+++ b/src/app/main-portal/cart/cart.component.html
@@ -13,9 +13,9 @@
             <div class="divi" *ngIf="show !== false" >
               <img [src]="filterdata[0].image[0]" alt="" srcset="">
 
-                <button type="button" class="btn2 " (click)="addition()" >+</button>
+                <!-- <button type="button" class="btn2 " (click)="addition()" >+</button>
                 {{cartQuantity}}
-                <button type="button" class="btn2 " (click)="subract()">-</button>
+                <button type="button" class="btn2 " (click)="subract()">-</button> -->
             </div>
             </div>
         </div>
