--- a/src/app/AdminPortal/admin-default/admin-default.component.html
+++ b/src/app/AdminPortal/admin-default/admin-default.component.html
@@ -41,7 +41,7 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="./Product-Analytics">
                 <span data-feather="shopping-cart"></span>
-                Product-Analytics
+                <i class="fa-solid fa-chart-simple me-2"></i>Product-Analytics
                <hr>
               </a>
             </li>
