--- a/src/app/main-portal/header/header.component.css
+++ b/src/app/main-portal/header/header.component.css
@@ -1,4 +1,4 @@
-.btn1:hover{
+/* .btn1:hover{
     
         color: #fff !important;
         text-shadow:
@@ -15,7 +15,12 @@
         -webkit-transition: all 0.2s ease-out;
         transition: all 0.2s ease-out;
       
-}
+} */
+
+
+
+
+
 
 
 ul>li>a{
