--- a/src/app/main-portal/header/header.component.html
+++ b/src/app/main-portal/header/header.component.html
@@ -7,17 +7,17 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/product"  >Home</a>
+            <a class="nav-link active" aria-current="page" routerLink="/product">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" routerLink="cart"  >cart</a>
+            <a class="nav-link active" routerLink="cart">cart</a>
           </li>
         </ul>
-        <button type="button" class="btn btn-outline-danger btn1 log me-2" routerLink="/sign-in">Login</button>
-        <button type="button" class="btn btn-outline-danger btn1 sign me-5">Sign-in</button>
+        <button type="button" class="btn btn-success  me-2" routerLink="/sign-in">Login</button>
+        <button type="button" class="btn btn-warning   me-5">Sign-in</button>
       </div>
     
-      <i class="fa-solid fa-cart-arrow-down ms-auto me-5"><p>{{counter}}</p></i>
+      <i class="fa-solid fa-cart-arrow-down ms-auto me-5 text-dark"><p>{{counter}}</p></i>
       
     </div>
     
