--- a/src/app/AdminPortal/AdminComponent/create-product/create-product.component.html
+++ b/src/app/AdminPortal/AdminComponent/create-product/create-product.component.html
@@ -23,8 +23,14 @@
           <label for="exampleInputPassword1" class="form-label">Email</label>
           <input type="email" class="form-control" id="exampleInputPassword1" formControlName="Email">
         </div>
-        <div>
-
+        <div class="error text-danger"
+        *ngIf="productForm.controls['Email'].invalid && (productForm.controls['Email'].dirty || productForm.controls['Email'].touched)">
+          <span *ngIf="productForm.controls['Email'].error.email">
+            <small>Enter valid Email example@gmail.com</small>
+          </span>
+          <span *ngIf="productForm.controls['Email'].errors.required">
+            <small>Field Required!</small>
+          </span>
         </div>
         
 
