--- a/src/app/AdminPortal/admin-default/admin-default.component.css
+++ b/src/app/AdminPortal/admin-default/admin-default.component.css
@@ -31,6 +31,16 @@ ul>li>a:hover {
   .sidebar{
     background: #0800ff;
   }
+
+/* Responsive Side Bar */
+
+
+
+
+
+
+
+
   /* @media screen and (min-width: 768px){
     .sidebar{
       display: inlineblock;
