--- a/src/app/AdminPortal/admin-default/admin-default.component.html
+++ b/src/app/AdminPortal/admin-default/admin-default.component.html
@@ -1,6 +1,7 @@
 
 <header class="navbar navbar-dark sticky-top  flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 x  " href="#">Admin-Pannel</a>
+    
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -14,7 +15,7 @@
   
   <div class="container-fluid">
     <div class="row">
-      <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse ">
+       <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse "> 
         <div class="position-sticky pt-3">
           <ul class="nav flex-column">
             <li class="nav-item">
@@ -104,10 +105,16 @@
             </li>
           </ul>
         </div>
-      </nav>
+      </nav> 
+
+       <!-- Responsive Side Bar -->
+
   
       <main class="col-md-9 box ms-sm-auto col-lg-10 px-md-4">
        <router-outlet></router-outlet>
       </main>
     </div>
   </div>
+
+
+ 
