--- a/src/app/main-portal/product/product.component.html
+++ b/src/app/main-portal/product/product.component.html
@@ -22,9 +22,27 @@
 
     </div>
 </div> -->
+
+<!------------------------------------------------------- Banner-Section ----------------------------------------------------------------------------->
+<div class="box bgImg">
+<div class="banner-heading">
+ <span class="text">|</span> Best <span class="blue">E-Commerce</span> Website
+</div>
+</div>
+
+
+
+
+
+
+
+<!------------------------------------------------------- /Banner-Section ----------------------------------------------------------------------------->
+
+
+<h2 class="product-Heading"><span>|</span> All-Products</h2>
 <div class="container">
   <div class="row">
-    <div class="col-md-4" *ngFor="let item of dataofsevice11">
+    <div class="col-md-6 col-lg-4" *ngFor="let item of dataofsevice11">
       <!-- flip-card-container -->
 <div class="flip-card-container" style="--hue: 220">
   <div class="flip-card">
@@ -83,6 +101,78 @@
     </div>
   </div>
 </div>
+
+
+
+
+
+<!--  ------------------------------------------------------------------------------------------------------------------->
+<h2 class="product-Heading"><span>|</span> Latest-Products</h2>
+<div class="container c4"  >
+  <div class="row " > 
+    <div class="col-md-6 col-lg-4"  *ngFor="let item of dataofsevice11">
+      <span >
+      <!-- flip-card-container -->
+<div class="flip-card-container" style="--hue: 220" *ngIf="item.productCategorie === 'Latest'">
+  <div class="flip-card">
+
+    <div class="card-front">
+      <figure>
+        <div class="img-bg"></div>
+        <img class="image1"  [src]="item.image"  alt="Salman Baloch">
+        <figcaption>{{item.Name}}</figcaption>
+      </figure>
+
+      <ul>
+        <!-- <li><h5 style="color:white;">{{item.title}}</h5></li> -->
+        <li><h5 class="text-white">Total Quantity</h5></li>
+        <li><h4>{{item.qty}}</h4></li>
+
+        <li>
+          <span *ngIf="item.qty!==0"><i class="fa-solid fa-square-check text-primary"></i>
+          </span>
+
+          <span *ngIf="item.qty === 0"><i class="fa-solid fa-rectangle-xmark text-danger"></i>
+         </span>
+      </li>
+
+        <li>
+          <h4 class="text-white">{{item.qty !==0 ? 'In Stock': ''}}</h4>
+          <h4 class="text-danger">{{item.qty ===0 ? 'Out Of Stock': ''}}</h4>
+        </li>
+      </ul>
+    </div>
+
+    <div class="card-back">
+      <figure>
+        <div class="img-bg"></div>
+         
+        <img [src]="item.image[1]" >
+        
+      </figure>
+
+      <button class="btn2" (click)="goToCartPage(item.id)" [disabled]="item.qty === 0" >Add To Cart</button>
+
+      <div class="design-container">
+        <span class="design design--1"></span>
+        <span class="design design--2"></span>
+        <span class="design design--3"></span>
+        <span class="design design--4"></span>
+        <span class="design design--5"></span>
+        <span class="design design--6"></span>
+        <span class="design design--7"></span>
+        <span class="design design--8"></span>
+      </div>
+    </div>
+
+  </div>
+</div>
+</span>
+    </div>
+  </div>
+</div>
+
+
 
   
 
