--- a/src/app/main-portal/cart/cart.component.css
+++ b/src/app/main-portal/cart/cart.component.css
@@ -16,6 +16,10 @@ img{
     /* margin-left: 20px;
     margin-right: 20px; */
 }
+.productHeading{
+    font-family: 'Yesteryear', cursive;
+}
+
 .c1{
     color: red;
     background-color: black;
