--- a/src/app/AdminPortal/AdminComponent/create-product/create-product.component.html
+++ b/src/app/AdminPortal/AdminComponent/create-product/create-product.component.html
@@ -31,7 +31,9 @@
           <span *ngIf="productForm.controls['Email'].errors.required">
             Field Required!
           </span>
+          
         </div>
+        <input type="file" class="mt-3"  (change)="getImage($event)">
 
 
 
