--- a/src/app/main-portal/footer/footer.component.html
+++ b/src/app/main-portal/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<!-- <footer>
     <div class="container-fluid mt-5 mb-5">
         
     
@@ -257,4 +257,4 @@
 
 </div>
 
-</footer>
+</footer> -->
