--- a/src/app/main-portal/header/header.component.html
+++ b/src/app/main-portal/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg  ">
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="#"><img src="../../../assets/images/logo.png" alt="" srcset="" height="40px" width="90px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +18,7 @@
         </ul>
         <button type="button" class="btn btn-success  me-2" routerLink="/sign-in"><i class="fa-solid fa-arrow-right-to-bracket" ></i></button>
         <a routerLink="/sign-in"></a>
-        <button type="button" class="btn btn-warning   me-5">Sign-in</button>
+        <button type="button" class="btn btn-warning me-5" routerLink="/Login">Login</button>
       </div>
     
       <i class="fa-solid fa-cart-arrow-down ms-auto me-5 text-dark"><p>{{counter}}</p></i>
