--- a/src/app/AdminPortal/AdminComponent/create-product/create-product.component.html
+++ b/src/app/AdminPortal/AdminComponent/create-product/create-product.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<!-- <div class="container mt-5">
     <form (ngSubmit)="submitProductForm()" [formGroup]="productForm">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Name</label>
@@ -46,5 +46,83 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-</div>
+</div> -->
+
+
+
+<!-- Section: Design Block -->
+<section class="">
+  <!-- Jumbotron -->
+  <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%)">
+    <div class="container">
+      <div class="row gx-lg-5 align-items-center">
+        <div class="col-lg-5 mb-5 mb-lg-0">
+          <h1 class="my-5 display-3 fw-bold ls-tight">
+            The best offer <br />
+            <span class="text-primary">for your business</span>
+          </h1>
+          <p style="color: hsl(217, 10%, 50.8%)">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Eveniet, itaque accusantium odio, soluta, corrupti aliquam
+            quibusdam tempora at cupiditate quis eum maiores libero
+            veritatis? Dicta facilis sint aliquid ipsum atque?
+          </p>
+        </div>
+
+        <div class="col-lg-7 mb-5 mb-lg-0">
+          <div class="card">
+            <div class="card-body py-5 px-md-5">
+              <form (ngSubmit)="submitProductForm()" [formGroup]="productForm">
+                <!-- 2 column grid layout with text inputs for the first and last names -->
+              
+
+                <!-- Email input -->
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Product Name</label>
+                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" formControlName="Name"> 
+                  <div class="error  text-danger"
+                  *ngIf="productForm.controls['Name'].invalid && (productForm.controls['Name'].dirty || productForm.controls['Name'].touched)">
+                  <span *ngIf="productForm.controls['Name'].errors.minlength || productForm.controls['Name'].errors.maxlength ">
+                    <small>Name between 4 to 20 Characters!</small></span>
+                  <span *ngIf="(productForm.controls['Name'].errors.pattern)">
+                    Only Alphabets & Spaces Allowed</span>
+                  <span *ngIf="productForm.controls['Name'].errors.required">
+                    <small>Field Required!</small>
+                  </span>
+                </div>
+                </div>
+
+                <!-- Product-Quantity -->
+                <label for="exampleInputEmail1" class="form-label">Product-Quantity</label>
+                <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" formControlName="Quantity"> 
+                <div class="error  text-danger"
+                *ngIf="productForm.controls['Quantity'].invalid && (productForm.controls['Quantity'].dirty || productForm.controls['Quantity'].touched)">
+                <span *ngIf="productForm.controls['Quantity'].errors.required">
+                  <small>Field Required!</small>
+                </span>
+                </div>
+                <!-- Password input -->
+                <input type="file" class="mt-3"  (change)="getImage($event)">
+
+                <!-- Checkbox -->
+                <!-- <div class="form-check d-flex justify-content-center mb-4">
+                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
+                  <label class="form-check-label" for="form2Example33">
+                    Subscribe to our newsletter
+                  </label>
+                </div> -->
+
+              
+
+                <!-- Register buttons -->
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Jumbotron -->
+</section>
+<!-- Section: Design Block -->
  
